# solana-python-examples

./: README.md  pyproject.toml
basics/: account_info.py  devnet_airdrop.py  generate_keypair.py  restore_keypair.py  send_sol.py
inscriptions/: constants.py  main.py
inscriptions/idls/: idl.json
inscriptions/instructions/: initialize.py  write_data.py
inscriptions/utils/: fetch_data.py  find_metadata_pda.py  find_shard_pda.py  serialize_data.py
